--- a/css/page.css
+++ b/css/page.css
@@ -1,11 +1,19 @@
 body {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 100vw;
+    height: 100vh;
+    gap: 5px;
 }
 
 body[theme="light"] {
-    background: #d4f7e1;
+    background: #add19e;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -20,44 +28,77 @@ body[theme="dark"] {
     color: white;
 }
 
-h1{
+#siteHeader {
+    box-sizing: border-box;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     text-align: center;
     padding: 20px;
     margin: 0;
+    width: 100%;
 }
 
-body[theme="light"] h1 {
-    background: #28a745;
+body[theme="light"] #siteHeader {
+    background: #ad974c;
     color: white;
 }
 
-body[theme="dark"] h1 {
+body[theme="dark"] #siteHeader {
     background: #3d3d3d; /* Градиент синих оттенков */
     color: white; /* Светло-синий текст */
 }
 
 .mapContainer {
+    margin: 20px;
+    box-sizing: border-box;
     border-radius: 8px;
     position: relative;
-    width: 90%; /* Уменьшить ширину карты */
-    height: 500px;
-    margin: 20px auto; /* Центрировать карту и добавить отступы */
+    width: 70%; /* Уменьшить ширину карты */
+    height: 70%;
     overflow: hidden;
 }
 
-.map {
-    width: 100%;
-    height: 100%;
-}
-
 body[theme="light"] .mapContainer {
-    border: 2px solid #66bb6a;
+    border: 2px solid grey;
 }
 
 body[theme="dark"] .mapContainer {
-    border: 2px solid #595959;
+    border: 2px solid #ffffff33;
 }
 
-body[theme="dark"] .map {
-    filter: invert(100%) hue-rotate(180deg); /* Инвертировать цвета карты */
+.notification-bubble {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 1000;
+    font-size: 14px;
+}
+
+body[theme="dark"] .context-menu-list {
+    border: 2px solid grey;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
+}
+
+body[theme="dark"] .context-menu-root,
+body[theme="dark"] .context-menu-list,
+body[theme="dark"] .context-menu-item {
+    background-color: #333;
+    color: white;
+}
+
+body[theme="dark"] .context-menu-hover {
+    background-color: rgb(167, 118, 27);
+}
+
+body[theme="dark"] .context-menu-item::after {
+    border-color: transparent transparent transparent white;
+}
+
+body[theme="dark"] .context-menu-icon::before {
+    color: white;
 }
