--- a/css/zoom-controls.css
+++ b/css/zoom-controls.css
@@ -6,16 +6,17 @@
     top: 50%;
     right: 10px;
     transform: translateY(-50%);
-    z-index: 1000;
 }
 
 body[theme="light"] .leaflet-control-zoom-custom {
     background-color: white;
+    border: 2px solid grey;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 body[theme="dark"] .leaflet-control-zoom-custom {
     background-color: #3d3d3d;
+    border: 2px solid grey;
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
 }
 
