--- a/css/page.css
+++ b/css/page.css
@@ -1,19 +1,17 @@
-body {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Arial, sans-serif;
+html, body {
     margin: 0;
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 100vw;
-    height: 100vh;
-    gap: 5px;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    font-family: sans-serif;
+    font-weight: lighter;
+    line-height: 1.2em;
+    display: flex;
+    flex-flow: column;
 }
 
 body[theme="light"] {
-    background: #add19e;
+    background: grey;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -28,42 +26,12 @@ body[theme="dark"] {
     color: white;
 }
 
-#siteHeader {
-    box-sizing: border-box;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    text-align: center;
-    padding: 20px;
-    margin: 0;
-    width: 100%;
-}
-
-body[theme="light"] #siteHeader {
-    background: #ad974c;
-    color: white;
-}
-
-body[theme="dark"] #siteHeader {
-    background: #3d3d3d; /* Градиент синих оттенков */
-    color: white; /* Светло-синий текст */
-}
-
-.mapContainer {
-    margin: 20px;
-    box-sizing: border-box;
-    border-radius: 8px;
+#content {
     position: relative;
-    width: 70%; /* Уменьшить ширину карты */
-    height: 70%;
-    overflow: hidden;
-}
-
-body[theme="light"] .mapContainer {
-    border: 2px solid grey;
-}
-
-body[theme="dark"] .mapContainer {
-    border: 2px solid #ffffff33;
+    box-sizing: border-box;
+    order: 1;
+    width: 100%; /* Changed from 100vw to 100% */
+    height: 100%;
 }
 
 .notification-bubble {
@@ -77,28 +45,4 @@ body[theme="dark"] .mapContainer {
     border-radius: 5px;
     z-index: 1000;
     font-size: 14px;
-}
-
-body[theme="dark"] .context-menu-list {
-    border: 2px solid grey;
-    box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
-}
-
-body[theme="dark"] .context-menu-root,
-body[theme="dark"] .context-menu-list,
-body[theme="dark"] .context-menu-item {
-    background-color: #333;
-    color: white;
-}
-
-body[theme="dark"] .context-menu-hover {
-    background-color: rgb(167, 118, 27);
-}
-
-body[theme="dark"] .context-menu-item::after {
-    border-color: transparent transparent transparent white;
-}
-
-body[theme="dark"] .context-menu-icon::before {
-    color: white;
 }
