--- a/css/zoom-controls.css
+++ b/css/zoom-controls.css
@@ -10,15 +10,14 @@
 
 body[theme="light"] .leaflet-control-zoom-custom {
     background-color: white;
-    border: 2px solid grey;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 12px rgba(0, 0, 0, 1);
 }
 
 body[theme="dark"] .leaflet-control-zoom-custom {
     background-color: #3d3d3d;
-    border: 2px solid grey;
-    box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
+    box-shadow: 0 0 8px rgba(255, 255, 255, 1);
 }
+
 
 .leaflet-control-zoom-custom button {
     background: transparent;
@@ -28,6 +27,7 @@ body[theme="dark"] .leaflet-control-zoom-custom {
     cursor: pointer;
     border-radius: 5px; /* Добавлено свойство border-radius */
     overflow: hidden;
+    font-size: 24px;
 }
 
 body[theme="light"] .leaflet-control-zoom-custom button {
