--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
-
 #header {
     box-sizing: border-box;
     width: 100%;
     padding: 10px;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
     z-index: 100;
     order: 0;
@@ -16,23 +16,28 @@
     align-items: center;
 }
 
+#siteName {
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-weight: 600;
+    font-size: 18px;
+    margin-left: 4px;
+    white-space: wrap;
+}
+
 #actions {
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
     gap: 10px;
     margin-left: auto; /* Это привяжет элемент справа */
-}
-
-#siteName {
-    font-family: 'Roboto', sans-serif; /* Added this line */
-    font-weight: bold;
 }
 
 .action {
     margin-top: 2px;
     margin-bottom: 2px;
     display: inline-block;
+    text-align: center;
     border-radius: 25px;
     padding: 5px;
     padding-left: 10px;
