--- a/css/context-menu.css
+++ b/css/context-menu.css
@@ -22,17 +22,23 @@
     font-size: 16px;
     position: relative;
     width: 100%;
-    align-self: center;
-    text-align: center;
-    /* Для размещения стрелки */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
 }
 
 .context-menu-item:hover {
     background-color: #f4f4f4;
 }
 
-.context-menu.hidden {
-    display: none;
+.icon {
+    width: 16px;
+    height: 16px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* Стили для светлой темы */
